
<resources>

    <string name="app_name">AmaralGuincho_App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txtLoginTelaLogin"></string>
    <string name="txtSenhaTelaLogin"></string>
    <string name="btnEntrarTelaLogin">Entrar</string>
    <string name="title_activity_tela_home">TelaHome</string>
    <string name="lblBemVindoTelaHome">Bem Vindo</string>
    <string name="lblNomeTelaHome">\"------\"</string>
    <string name="btnOrdemDeServicoTelaHome"></string>
    <string name="lblDescricaoOrdemDeServicoTelaHome">Consultas Nas Ordens De Serviço</string>
    <string name="lblOrdemDeServicoTelaHome">Ordem De Servico</string>
    <string name="btnMotoristaTelaHome"></string>
    <string name="lblMotoristaTelaHome">Motoristas</string>
    <string name="lblDescricaoMotoristaTelaHome">Tarefas dos Motoristas</string>
    <string name="btnClientesTelaHome"></string>
    <string name="lblClienteTelaHome">Clientes</string>
    <string name="lblDescricaoClienteTelaHome">Consultas em Clientes Registrados</string>
    <string name="title_activity_ordem_de_servico">OrdemDeServico</string>
    <string name="title_activity_consulta_ordem_de_servico">ConsultaOrdemDeServico</string>
    <string name="title_activity_detalhes_ordem_de_servico">DetalhesOrdemDeServico</string>
    <string name="lblCodigoTelaConsultaOrdemDeServico">Código</string>
    <string name="lblDtAberturaTelaConsultaOrdemDeServico">Data de Abertura</string>
    <string name="lblHoraTelaConsultaOrdemDeServico">Hora</string>
    <string name="lblOperadorTelaConsultaOrdemDeServico">Operador</string>
    <string name="lblStatusTelaConsultaOrdemDeServico">Status</string>
    <string name="lblAgendamentoTelaConsultaOrdemDeServico">Agendamento</string>
    <string name="lblDataAgendamentoTelaConsultaOrdemDeServico">Data Agendameto</string>
    <string name="lblHoraAgendamentoTelaConsultaOrdemDeServico">Hora</string>
    <string name="lblKmRodandoTelaConsultaOrdemDeServico">Km Rodando</string>
    <string name="lblTotalDeHorasTelaConsultaOrdemDeServico">Total de Horas</string>
    <string name="lblServicosTelaConsultaOrdemDeServico">Serviços</string>
    <string name="lblCodigoValorTelaConsultaOrdemDeServico"></string>
    <string name="lblDataAberturaValorTelaConsultaOrdemDeServico"></string>
    <string name="lblHoraValorTelaConsultaOrdemDeServico"></string>
    <string name="lblOperadorValorTelaConsultaOrdemDeServico"></string>
    <string name="lblStatusValorTelaConsultaOrdemDeServico"></string>
    <string name="lblAgendamentoValorTelaConsultaOrdemDeServico"></string>
    <string name="lblDataAgendamentoValorTelaConsultaOrdemDeServico"></string>
    <string name="lblHoraAgendamentoValorTelaConsultaOrdemDeServico"></string>
    <string name="lblKmRodandoValorTelaConsultaOrdemDeServico"></string>
    <string name="lblTotalDeHorasValorTelaConsultaOrdemDeServico"></string>
    <string name="lblServicosValorTelaConsultaOrdemDeServico"></string>
    <string name="btnVeiculo"></string>
    <string name="lblVeiculoTelaDetalhesOrdemDeServico">\"Veiculo\"</string>
    <string name="lblDetalheVeiculoTelaConsultaOrdemDeServico">Saiba Mais Sobre o Veículo</string>
    <string name="btnClienteTelaConsultaOrdemDeServico"></string>
    <string name="lblClienteTelaDetalhesOrdemDeServico">\"Cliente\"</string>
    <string name="lblDetalheClienteTelaDetalhesOrdemDeServico">Saiba Mais Sobre o Cliente</string>
    <string name="title_activity_veiculo">Veiculo</string>
    <string name="lblCodigoTelaVeiculo">Codigo</string>
    <string name="lblModeloTelaVeiculo">Modelo</string>
    <string name="lblAnoTelaVeiculo">Ano</string>
    <string name="lblCorTelaVeiculo">Cor</string>
    <string name="lblCodigoValorTelaVeiculo"></string>
    <string name="lblModeloValorTelaVeiculo"></string>
    <string name="lblAnoValorTelaVeiculo"></string>
    <string name="lblCorValorTelaVeiculo"></string>
    <string name="lblFabricanteTelaVeiculo">Fabricante</string>
    <string name="lblPlacaTelaVeiculo">Placa</string>
    <string name="lblFabricanteValorTelaVeiculo"></string>
    <string name="lblPlacaValorTelaVeiculo"></string>
    <string name="btnClienteTelaVeiculo"></string>
    <string name="lblClienteTelaVeiculo">\"Cliente\"</string>
    <string name="lblDescricaoClienteTelaVeiculo">Saiba Mais Sobre o Cliente</string>
    <string name="btnServicosPrestadosTelaVeiculo"></string>
    <string name="lblServicosPrestadosTelaVeiculos">Serviços Prestados</string>
    <string name="lblDescricaoServicosPrestadosTelaVeiculos">Consulte os Serviços Dessa OS</string>
    <string name="title_activity_servicos_prestados">ServicosPrestados</string>
    <string name="title_activity_tela_cliente">TelaCliente</string>
    <string name="lblSobrenomeClienteTelaCliente">&quot;\SobreNomeCliente\&quot;</string>
    <string name="lblNomeClienteTelaCliente">\"Nome Cliente\"</string>
    <string name="lblCodigoClienteTelaCliente">Código</string>
    <string name="txtCodigoClienteTelaCliente"></string>
    <string name="lblNome2ClienteTelaCliente">Nome</string>
    <string name="lblSobrenome2ClienteTelaCliente">Sobrenome</string>
    <string name="lblSexoClienteTelaCliente">Sexo</string>
    <string name="txtSexoClienteTelaCliente"></string>
    <string name="lblDataNascimentoClienteTelaCliente">Data de Nascimento</string>
    <string name="txtDataNascimentoClienteTelaCliente"></string>
    <string name="lblCpfClienteTelaCliente">Cpf</string>
    <string name="txtCpfClienteTelaCliente"></string>
    <string name="lblEmailClienteTelaCliente">Email</string>
    <string name="txtEmailClienteTelaCliente"></string>
    <string name="title_activity_tela_funcionaro">TelaFuncionaro</string>
    <string name="lblSobrenomeFuncionarioTelaFuncionario">\"Sobrenome\"</string>
    <string name="lblNomeFuncionarioTelaFuncionario">\"Nome\"</string>
    <string name="btnHabilitacaoTelaFuncionario"></string>
    <string name="lblHabilitacaoTelaFuncionario">Habilitação</string>
    <string name="lblCodigoTelaFuncionario">Código</string>
    <string name="lblNome2TelaFuncionario">Nome</string>
    <string name="lblSobrenome2TelaFuncionario">Sobrenome</string>
    <string name="lblSexoTelaFuncionario">Sexo</string>
    <string name="lblDataNascimentoTelaFuncionario">Data de Nascimento</string>
    <string name="lblCpfTelaFuncionario">Cpf</string>
    <string name="lblTelefoneTelaFuncionario">Telefone</string>
    <string name="lblEmailTelaFuncionario">Email</string>
    <string name="lblResedenciaTelaFuncionario">Residência</string>
    <string name="txtCodigoTelaFuncionario"></string>
    <string name="txtResidenciaTelaFuncionario"></string>
    <string name="txtEmailTelaFuncionario"></string>
    <string name="txtCpfTelaFuncionario"></string>
    <string name="txtTelefoneTelaFuncionario"></string>
    <string name="txtSexoTelaFuncionario"></string>
    <string name="txtNomeTelaFuncionario"></string>
    <string name="txtSobrenomeTelaFuncionario"></string>
    <string name="txtDataNascimentoTelaFuncionario"></string>
    <string name="title_activity_habilitacao">Habilitacao</string>
    <string name="lblNomeTelaHabilitacao">\"Nome\"</string>
    <string name="lblSobrenomeTelaHabilitacao"></string>
    <string name="lblNomeHabilitacaoTelaHabilitacao">Nome Habilitação</string>
    <string name="lblIdentidadeTelaHabilitacao">Identidade</string>
    <string name="lblNumeroRegistroTelaHabilitacao">Numero de Registro</string>
    <string name="lblValidadeRegistroTelaHabilitacao">Validade</string>
    <string name="lblLocalGeradoTelaHabilitacao">Local Gerado</string>
    <string name="lblEmissaoTelaHabilitacao">Emissão</string>
    <string name="txtNomeHabilitacaoTelaHabilitacao"></string>
    <string name="txtIdentidadeTelaHabilitacao"></string>
    <string name="txtNumeroRegistroHabilitacaoTelaHabilitacao"></string>
    <string name="txtValidadeHabilitacaoTelaHabilitacao"></string>
    <string name="txtLocalGeradoHabilitacaoTelaHabilitacao"></string>
    <string name="txtEmissaoHabilitacaoTelaHabilitacao"></string>
    <string name="title_activity_tela_frota">TelaFrota</string>
    <string name="lblTipoFrotaTelaFrota">\"Tipo Frota\"</string>
    <string name="lblNomeFrotaTelaFrota">\"Nome Frota\"</string>
    <string name="lblCodigoFrotaTelaFrota">Código</string>
    <string name="txtCodigoFrotaTelaFrota"></string>
    <string name="lblModeloFrotaTelaFrota">Modelo</string>
    <string name="lblAnoFrotaTelaFrota">Ano</string>
    <string name="txtAnoFrotaTelaFrota"></string>
    <string name="lblFabricanteFrotaTelaFrota">Fabricante</string>
    <string name="txtFabricanteFrotaTelaFrota"></string>
    <string name="lblPlacaFrotaTelaFrota">Placa</string>
    <string name="txtPlacaFrotaTelaFrota"></string>
    <string name="title_activity_lista_frota">ListaFrota</string>
    <string name="txtCodigoTelaConsultaOrdemDeServico"></string>
    <string name="txtStatusTelaConsultaOrdemDeServico"></string>
    <string name="txtDataAgendamentoTelaConsultaOrdemDeServico"></string>
    <string name="txtServicosTelaConsultaOrdemDeServico"></string>
    <string name="txtOperadorTelaConsultaOrdemDeServico"></string>
    <string name="txtAgendamentoTelaConsultaOrdemDeServico"></string>
    <string name="txtModeloFrotaTelaFrota"></string>

</resources>
