<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amaralguincho_app.Veiculo" >

    <TextView
        android:id="@+id/lblCodigoTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblCodigoTelaVeiculo" />

    <TextView
        android:id="@+id/lblModeloTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblCodigoTelaVeiculo"
        android:layout_alignBottom="@+id/lblCodigoTelaVeiculo"
        android:layout_marginLeft="37dp"
        android:layout_toRightOf="@+id/lblCodigoTelaVeiculo"
        android:text="@string/lblModeloTelaVeiculo" />

    <TextView
        android:id="@+id/lblCodigoValorTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblCodigoTelaVeiculo"
        android:layout_below="@+id/lblCodigoTelaVeiculo"
        android:text="@string/lblCodigoValorTelaVeiculo" />

    <TextView
        android:id="@+id/lblModeloValorTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblModeloTelaVeiculo"
        android:layout_alignTop="@+id/lblCodigoValorTelaVeiculo"
        android:text="@string/lblModeloValorTelaVeiculo" />

    <TextView
        android:id="@+id/lblAnoTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblModeloValorTelaVeiculo"
        android:layout_marginRight="32dp"
        android:layout_toLeftOf="@+id/lblCorTelaVeiculo"
        android:text="@string/lblAnoTelaVeiculo" />

    <TextView
        android:id="@+id/lblCorTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblModeloValorTelaVeiculo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="48dp"
        android:text="@string/lblCorTelaVeiculo" />

    <TextView
        android:id="@+id/lblAnoValorTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblModeloValorTelaVeiculo"
        android:layout_alignBottom="@+id/lblModeloValorTelaVeiculo"
        android:layout_alignLeft="@+id/lblAnoTelaVeiculo"
        android:text="@string/lblAnoValorTelaVeiculo" />

    <TextView
        android:id="@+id/lblCorValorTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblCorTelaVeiculo"
        android:layout_toRightOf="@+id/lblAnoTelaVeiculo"
        android:text="@string/lblCorValorTelaVeiculo" />

    <TextView
        android:id="@+id/lblFabricanteTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblCodigoValorTelaVeiculo"
        android:layout_below="@+id/lblCodigoValorTelaVeiculo"
        android:layout_marginTop="23dp"
        android:text="@string/lblFabricanteTelaVeiculo" />

    <TextView
        android:id="@+id/lblSobrenomeClienteTelaCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblFabricanteTelaVeiculo"
        android:layout_alignBottom="@+id/lblFabricanteTelaVeiculo"
        android:layout_alignRight="@+id/lblCorTelaVeiculo"
        android:text="@string/lblPlacaTelaVeiculo" />

    <TextView
        android:id="@+id/lblFabricanteValorTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblFabricanteTelaVeiculo"
        android:layout_below="@+id/lblFabricanteTelaVeiculo"
        android:text="@string/lblFabricanteValorTelaVeiculo" />

    <TextView
        android:id="@+id/lblPlacaValorTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblSobrenomeClienteTelaCliente"
        android:layout_alignTop="@+id/lblFabricanteValorTelaVeiculo"
        android:text="@string/lblPlacaValorTelaVeiculo" />

    <Button
        android:id="@+id/btnClienteTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lblCodigoTelaVeiculo"
        android:layout_centerVertical="true"
        android:text="@string/btnClienteTelaVeiculo" />

    <TextView
        android:id="@+id/lblNome2ClienteTelaCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnClienteTelaVeiculo"
        android:layout_toRightOf="@+id/btnClienteTelaVeiculo"
        android:text="@string/lblClienteTelaVeiculo" />

    <TextView
        android:id="@+id/lblDescricaoClienteTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnClienteTelaVeiculo"
        android:layout_alignLeft="@+id/lblNome2ClienteTelaCliente"
        android:text="@string/lblDescricaoClienteTelaVeiculo" />

    <Button
        android:id="@+id/btnServicosPrestadosTelaVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnClienteTelaVeiculo"
        android:layout_below="@+id/btnClienteTelaVeiculo"
        android:layout_marginTop="31dp"
        android:text="@string/btnServicosPrestadosTelaVeiculo" />

    <TextView
        android:id="@+id/lblServicosPrestadosTelaVeiculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDescricaoClienteTelaVeiculo"
        android:layout_alignTop="@+id/btnServicosPrestadosTelaVeiculo"
        android:text="@string/lblServicosPrestadosTelaVeiculos" />

    <TextView
        android:id="@+id/lblDescricaoServicosPrestadosTelaVeiculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnServicosPrestadosTelaVeiculo"
        android:layout_alignLeft="@+id/lblServicosPrestadosTelaVeiculos"
        android:text="@string/lblDescricaoServicosPrestadosTelaVeiculos" />

</RelativeLayout>
