<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amaralguincho_app.DetalhesOrdemDeServico" >

    <TextView
        android:id="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblCodigoTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblDtAberturaTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:layout_alignBottom="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:layout_marginLeft="33dp"
        android:layout_toRightOf="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:text="@string/lblDtAberturaTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblHoraTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblDtAberturaTelaConsultaOrdemDeServico"
        android:layout_alignBottom="@+id/lblDtAberturaTelaConsultaOrdemDeServico"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/lblDtAberturaTelaConsultaOrdemDeServico"
        android:text="@string/lblHoraTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblStatusTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblOperadorTelaConsultaOrdemDeServico"
        android:layout_alignBottom="@+id/lblOperadorTelaConsultaOrdemDeServico"
        android:layout_toLeftOf="@+id/lblHoraTelaConsultaOrdemDeServico"
        android:text="@string/lblStatusTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblAgendamentoTelaConsultaOrdemDeServico"
        android:layout_alignBottom="@+id/lblAgendamentoTelaConsultaOrdemDeServico"
        android:layout_alignRight="@+id/lblHoraTelaConsultaOrdemDeServico"
        android:layout_marginRight="16dp"
        android:text="@string/lblDataAgendamentoTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblHoraAgendamentoTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:layout_alignBottom="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:layout_toRightOf="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:text="@string/lblHoraAgendamentoTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblTotalDeHorasTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblKmRodandoTelaConsultaOrdemDeServico"
        android:layout_alignBottom="@+id/lblKmRodandoTelaConsultaOrdemDeServico"
        android:layout_alignLeft="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:text="@string/lblTotalDeHorasTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblAgendamentoTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblKmRodandoTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblOperadorTelaConsultaOrdemDeServico"
        android:layout_marginTop="30dp"
        android:text="@string/lblAgendamentoTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblKmRodandoTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblAgendamentoTelaConsultaOrdemDeServico"
        android:layout_marginTop="31dp"
        android:text="@string/lblKmRodandoTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblOperadorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:layout_marginTop="28dp"
        android:text="@string/lblOperadorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblServicosTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblTotalDeHorasTelaConsultaOrdemDeServico"
        android:layout_alignBottom="@+id/lblTotalDeHorasTelaConsultaOrdemDeServico"
        android:layout_alignRight="@+id/lblHoraAgendamentoTelaConsultaOrdemDeServico"
        android:text="@string/lblServicosTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblCodigoValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:text="@string/lblCodigoValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblDataAberturaValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDtAberturaTelaConsultaOrdemDeServico"
        android:layout_alignTop="@+id/lblCodigoValorTelaConsultaOrdemDeServico"
        android:text="@string/lblDataAberturaValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblHoraValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblHoraTelaConsultaOrdemDeServico"
        android:layout_alignTop="@+id/lblDataAberturaValorTelaConsultaOrdemDeServico"
        android:text="@string/lblHoraValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblOperadorValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblOperadorTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblOperadorTelaConsultaOrdemDeServico"
        android:text="@string/lblOperadorValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblStatusValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblStatusTelaConsultaOrdemDeServico"
        android:layout_alignTop="@+id/lblOperadorValorTelaConsultaOrdemDeServico"
        android:text="@string/lblStatusValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblAgendamentoValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblAgendamentoTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblAgendamentoTelaConsultaOrdemDeServico"
        android:text="@string/lblAgendamentoValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblDataAgendamentoValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:text="@string/lblDataAgendamentoValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblHoraAgendamentoValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblDataAgendamentoValorTelaConsultaOrdemDeServico"
        android:layout_toRightOf="@+id/lblDataAgendamentoTelaConsultaOrdemDeServico"
        android:text="@string/lblHoraAgendamentoValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblKmRodandoValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblKmRodandoTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblKmRodandoTelaConsultaOrdemDeServico"
        android:text="@string/lblKmRodandoValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblTotalDeHorasValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTotalDeHorasTelaConsultaOrdemDeServico"
        android:layout_alignTop="@+id/lblKmRodandoValorTelaConsultaOrdemDeServico"
        android:text="@string/lblTotalDeHorasValorTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblServicosValorTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblServicosTelaConsultaOrdemDeServico"
        android:layout_alignTop="@+id/lblTotalDeHorasValorTelaConsultaOrdemDeServico"
        android:text="@string/lblServicosValorTelaConsultaOrdemDeServico" />

    <Button
        android:id="@+id/btnVeiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblKmRodandoValorTelaConsultaOrdemDeServico"
        android:layout_alignRight="@+id/lblCodigoTelaConsultaOrdemDeServico"
        android:layout_below="@+id/lblKmRodandoValorTelaConsultaOrdemDeServico"
        android:layout_marginTop="21dp"
        android:text="@string/btnVeiculo" />

    <TextView
        android:id="@+id/lblVeiculoTelaDetalhesOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnVeiculo"
        android:layout_toRightOf="@+id/btnVeiculo"
        android:text="@string/lblVeiculoTelaDetalhesOrdemDeServico" />

    <TextView
        android:id="@+id/lblDetalheVeiculoTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnVeiculo"
        android:layout_toLeftOf="@+id/lblServicosValorTelaConsultaOrdemDeServico"
        android:text="@string/lblDetalheVeiculoTelaConsultaOrdemDeServico" />

    <Button
        android:id="@+id/btnClienteTelaConsultaOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnVeiculo"
        android:layout_alignRight="@+id/btnVeiculo"
        android:layout_below="@+id/btnVeiculo"
        android:layout_marginTop="21dp"
        android:text="@string/btnClienteTelaConsultaOrdemDeServico" />

    <TextView
        android:id="@+id/lblClienteTelaDetalhesOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblDetalheVeiculoTelaConsultaOrdemDeServico"
        android:layout_alignTop="@+id/btnClienteTelaConsultaOrdemDeServico"
        android:text="@string/lblClienteTelaDetalhesOrdemDeServico" />

    <TextView
        android:id="@+id/lblDetalheClienteTelaDetalhesOrdemDeServico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnClienteTelaConsultaOrdemDeServico"
        android:layout_alignLeft="@+id/lblClienteTelaDetalhesOrdemDeServico"
        android:text="@string/lblDetalheClienteTelaDetalhesOrdemDeServico" />

</RelativeLayout>
